dbConfig.load() returns dbConfig rather than dbkey moved db argument after user/pass arguments in load() function improved exception handling in getConnection()